Fixed white space at the bottom of the page

--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,7 @@ body {
   margin-top: -100px;
   display: flex;
   justify-content: center;
+  overflow: hidden;
 }
 
 #kitty {
